@@ -6,22 +6,17 @@ trigger:
 
 pr: none
 
-variables:
-  python_version: 3.13
-
 pool:
   vmImage: "ubuntu-latest"
 
 steps:
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: "$(python_version)"
-    displayName: "Use Python $(python_version)"
+  - script: python --version
+    displayName: "Check Python version"
 
   - script: |
-      sudo apt-get install -y libcairo2-dev
-    displayName: "Install system packages (cairo)"
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
+      sudo apt-get update
+      sudo apt-get install -y texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra latexmk imagemagick
+    displayName: "Install LaTeX packages"
 
   - script: |
       python -m pip install --upgrade pip
@@ -29,7 +24,7 @@ steps:
     displayName: "Install build dependencies"
 
   - script: |
-      pip install matplotlib numpydoc rst2pdf sphinx sphinx-pyproject sphinx_rtd_theme svglib
+      pip install matplotlib numpydoc sphinx sphinx-pyproject sphinx_rtd_theme
     displayName: "Install documentation dependencies"
 
   - script: pip install .
@@ -53,8 +48,9 @@ steps:
     displayName: "Patch HTML documentation for webpage"
 
   - script: |
-      sphinx-build -b pdf doc/source build/sphinx/pdf
-      cp build/sphinx/pdf/xrayutilities.pdf build/sphinx/html/
+      sphinx-build -b latex doc/source build/sphinx/latex
+      make -C build/sphinx/latex
+      cp build/sphinx/latex/xrayutilities.pdf build/sphinx/html/
     displayName: "Generating PDF documentation"
 
   # cleanTargetFolder not supported without shell access
